1999-04-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* headers.m4 (md_CREATE_LIBOBJC_HEADERS): Convert i486, i586, and
	i586 into i386.
